test/data/codegen/valid/write_exec_delete/queries.cypher
// name: RemovePerson :exec
MATCH (p:Person) WHERE p.id = $id DELETE p
