test/data/codegen/invalid/cardinality_shape_zero_column_write_one/queries.cypher
// name: RemovePerson :one
MATCH (p:Person) WHERE p.id = $id DELETE p
